--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOK/PDGJW5gh6JIsNsfUGAG",
+      "authorship_tag": "ABX9TyN9dcJDNswTDcYYNRHZDaiX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1022,8 +1022,22 @@
     {
       "cell_type": "code",
       "source": [
-        "#Char tokenizer file\n",
-        "import torch\n",
+        "import copy , os , datasets , torch , nltk\n",
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+        "from torch.utils.data import Dataset\n",
+        "from torch.utils.data.dataloader import DataLoader\n",
+        "\n",
+        "import sys\n",
+        "# Install mingpt using pip\n",
+        "!pip install mingpt\n",
+        "\n",
+        "from mingpt.model import GPT\n",
+        "#from mingpt.char_tokenizer import CharTokenizer\n",
+        "#from mingpt.logger import Logger\n",
+        "from mingpt.model import GPT\n",
+        "from mingpt.trainer import Trainer\n",
+        "from mingpt.utils import set_seed\n",
+        "\n",
         "class CharTokenizer():\n",
         "  pad_char = \"-\"\n",
         "  eot_char = \"⏎\"\n",
@@ -1039,14 +1053,15 @@
         "    self.eot_token = self.stoi[self.eot_char]\n",
         "\n",
         "  def __call__(self, text:str) ->torch.LongTensor:\n",
-        "    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype = torch.long)\n",
+        "    # Corrected the way of creating a LongTensor from a list\n",
+        "    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype=torch.long)\n",
         "  def decode(self, tokens ,ignore_padding = False) ->str:\n",
         "    return \"\".join([self.itos[i] for i in tokens.tolist() if i in self.itos and not ignore_padding or i != self.pad_token])"
       ],
       "metadata": {
         "id": "jWQFFVmqr1wo"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1088,30 +1103,30 @@
         "      self.tokenizer = CharTokenizer(token_text_example)\n",
         "      print(\"Tokenizer built\")\n",
         "\n",
-        "def get_vocab_size(self):\n",
-        "  return self.tokenizer.vocab_size\n",
-        "def get_block_size(self):\n",
-        "  return self.block_size\n",
-        "def __len__(self):\n",
-        "  return len(self.dataset)\n",
-        "def __getitem__(self,idx):\n",
-        "  chunk = self.dataset[idx][\"content\"]\n",
-        "  tokens = self.tokenizer(chunk)\n",
-        "  assert(len(tokens)) >0\n",
-        "  if len(tokens) >=self.block_size +1:\n",
-        "    toks = tokens[:self.block_size+1]\n",
-        "  else:\n",
-        "    pad = torch.full((self.block_size+1,),self.tokenizer.pad_token , dtype = torch.long)\n",
-        "    pad[:len(tokens)] = tokens # Use 'tokens' instead of 'toks'\n",
-        "    toks = pad\n",
-        "  x = toks[:-1]\n",
-        "  y = toks[1:].clone() #creating target label sequence by shifting the intial sequence by 1\n",
-        "  y[y==self.tokenizer.pad_token] = -1 # masks padding in the target\n",
+        "  def get_vocab_size(self):\n",
+        "    return self.tokenizer.vocab_size\n",
+        "  def get_block_size(self):\n",
+        "    return self.block_size\n",
+        "  def __len__(self):\n",
+        "    return len(self.dataset)\n",
+        "  def __getitem__(self,idx):\n",
+        "    chunk = self.dataset[idx][\"content\"]\n",
+        "    tokens = self.tokenizer(chunk)\n",
+        "    assert(len(tokens)) >0\n",
+        "    if len(tokens) >=self.block_size +1:\n",
+        "      toks = tokens[:self.block_size+1]\n",
+        "    else:\n",
+        "      pad = torch.full((self.block_size+1,),self.tokenizer.pad_token , dtype = torch.long)\n",
+        "      pad[:len(tokens)] = tokens # Use 'tokens' instead of 'toks'\n",
+        "      toks = pad\n",
+        "    x = toks[:-1]\n",
+        "    y = toks[1:].clone() #creating target label sequence by shifting the intial sequence by 1\n",
+        "    y[y==self.tokenizer.pad_token] = -1 # masks padding in the target\n",
         "\n",
-        "  #our mask is true for padding / unused tasks\n",
-        "  #to match the causal masking inside the miniGPT model\n",
-        "  attn_mask = x ==self.tokenizer.pad_token #attention should not be paid to pad_token\n",
-        "  return x, y ,attn_mask #returns input , output and attn_mask\n",
+        "    #our mask is true for padding / unused tasks\n",
+        "    #to match the causal masking inside the miniGPT model\n",
+        "    attn_mask = x ==self.tokenizer.pad_token #attention should not be paid to pad_token\n",
+        "    return x, y ,attn_mask #returns input , output and attn_mask\n",
         "\n",
         "class SentimentRewardModel():\n",
         "  def __init__(self,tokenizer):\n",
@@ -1130,7 +1145,7 @@
         "      rewards[i] = self.sentiment(sentence)\n",
         "    return rewards.to(tokens.device)\n",
         "\n",
-        "def batch_end_callback(trainer, train_ds, valid_loader, TEST_PROMPT):\n",
+        "def batch_end_callback(trainer):\n",
         "  model = trainer.model\n",
         "  model.eval()\n",
         "  if trainer.iter_num % 100 == 0:\n",
@@ -1188,7 +1203,7 @@
         "      batch_size=train_config.batch_size*2,\n",
         "      num_workers=train_config.num_workers,\n",
         "  )\n",
-        "  trainer.set_callback(\"on_batch_end\", lambda trainer: batch_end_callback(trainer, train_ds, valid_loader, TEST_PROMPT))\n",
+        "  trainer.set_callback(\"on_batch_end\", batch_end_callback)\n",
         "  trainer.run()\n",
         "  print(\"\\n===== DONE PRETRAINING =====\")\n",
         "\n",
@@ -1208,10 +1223,57 @@
         "  print(\"\\n===== STARTING SUPERVISED FINE-TUNING (SFT) =====\")"
       ],
       "metadata": {
-        "id": "H0MG8KE2meWr"
+        "id": "H0MG8KE2meWr",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "beff2e34-97b3-4e00-8acc-d5c26cd94143"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "===== STARTING PRETRAINING on TinyStories =====\n",
+            "Building a new tokenizer\n",
+            "data has 8694761 characters , 93 unique\n",
+            "Tokenizer built\n",
+            "Building a new tokenizer\n",
+            "data has 8306393 characters , 95 unique\n",
+            "Tokenizer built\n",
+            "number of parameters: 0.81M\n",
+            "running on device cpu\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py:627: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py:666: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+            "  warnings.warn(warn_msg)\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "Caught TypeError in DataLoader worker process 0.\nOriginal Traceback (most recent call last):\n  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/data/_utils/worker.py\", line 349, in _worker_loop\n    data = fetcher.fetch(index)  # type: ignore[possibly-undefined]\n           ^^^^^^^^^^^^^^^^^^^^\n  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/data/_utils/fetch.py\", line 52, in fetch\n    data = [self.dataset[idx] for idx in possibly_batched_index]\n            ~~~~~~~~~~~~^^^^^\n  File \"/tmp/ipython-input-94737762.py\", line 45, in __getitem__\n    tokens = self.tokenizer(chunk)\n             ^^^^^^^^^^^^^^^^^^^^^\n  File \"/tmp/ipython-input-1213592807.py\", line 33, in __call__\n    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype=torch.long)\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nTypeError: new() received an invalid combination of arguments - got (list, dtype=torch.dtype), but expected one of:\n * (*, torch.device device = None)\n      didn't match because some of the keywords were incorrect: dtype\n * (torch.Storage storage)\n * (Tensor other)\n * (tuple of ints size, *, torch.device device = None)\n * (object data, *, torch.device device = None)\n\n",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-94737762.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    136\u001b[0m   )\n\u001b[1;32m    137\u001b[0m   \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_callback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"on_batch_end\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_end_callback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_ds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTEST_PROMPT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 138\u001b[0;31m   \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    139\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n===== DONE PRETRAINING =====\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/mingpt/trainer.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0;31m# fetch the next batch (x, y) and re-init iterator if needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m                 \u001b[0mbatch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_iter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m                 \u001b[0mdata_iter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    732\u001b[0m                 \u001b[0;31m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[call-arg]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_yielded\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m             if (\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m_next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1514\u001b[0m                 \u001b[0mworker_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_task_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1515\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_rcvd_idx\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1516\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_process_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworker_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1517\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1518\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_try_put_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m_process_data\u001b[0;34m(self, data, worker_idx)\u001b[0m\n\u001b[1;32m   1549\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_try_put_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1550\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mExceptionWrapper\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1551\u001b[0;31m             \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreraise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1552\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1553\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/_utils.py\u001b[0m in \u001b[0;36mreraise\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    767\u001b[0m             \u001b[0;31m# be constructed, don't try to instantiate since we don't know how to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    768\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 769\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    770\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    771\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: Caught TypeError in DataLoader worker process 0.\nOriginal Traceback (most recent call last):\n  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/data/_utils/worker.py\", line 349, in _worker_loop\n    data = fetcher.fetch(index)  # type: ignore[possibly-undefined]\n           ^^^^^^^^^^^^^^^^^^^^\n  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/data/_utils/fetch.py\", line 52, in fetch\n    data = [self.dataset[idx] for idx in possibly_batched_index]\n            ~~~~~~~~~~~~^^^^^\n  File \"/tmp/ipython-input-94737762.py\", line 45, in __getitem__\n    tokens = self.tokenizer(chunk)\n             ^^^^^^^^^^^^^^^^^^^^^\n  File \"/tmp/ipython-input-1213592807.py\", line 33, in __call__\n    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype=torch.long)\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nTypeError: new() received an invalid combination of arguments - got (list, dtype=torch.dtype), but expected one of:\n * (*, torch.device device = None)\n      didn't match because some of the keywords were incorrect: dtype\n * (torch.Storage storage)\n * (Tensor other)\n * (tuple of ints size, *, torch.device device = None)\n * (object data, *, torch.device device = None)\n\n"
+          ]
+        }
+      ]
     }
   ]
 }
