--- a/Handlingclassimbalance.ipynb
+++ b/Handlingclassimbalance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO14P6iEdyD0a+WYtVZjOjX",
+      "authorship_tag": "ABX9TyPrKXcWI7BM8kEgNDXFarrj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -462,7 +462,7 @@
           "height": 449
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -491,7 +491,7 @@
           "height": 452
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -508,7 +508,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#TOD-BERT for Task Oriented Dialogue Management\n",
+        "#TOD-BERT for Task Oriented Dialogue Management - use multitask learning with diff losses ....\n",
         "#sentence transformers use a Multiple Negative Ranking Loss  Formula is = sim(text, positive)/ sim(text , all)\n",
         "#Semi Supervised Manner\n",
         "#import torch\n",
