--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9dcJDNswTDcYYNRHZDaiX",
+      "authorship_tag": "ABX9TyN19HaYMMSYpwxvNUGMlcZq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1054,7 +1054,7 @@
         "\n",
         "  def __call__(self, text:str) ->torch.LongTensor:\n",
         "    # Corrected the way of creating a LongTensor from a list\n",
-        "    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype=torch.long)\n",
+        "    return torch.tensor([self.stoi[c] for c in text if c in self.stoi], dtype=torch.long)\n",
         "  def decode(self, tokens ,ignore_padding = False) ->str:\n",
         "    return \"\".join([self.itos[i] for i in tokens.tolist() if i in self.itos and not ignore_padding or i != self.pad_token])"
       ],
@@ -1109,6 +1109,7 @@
         "    return self.block_size\n",
         "  def __len__(self):\n",
         "    return len(self.dataset)\n",
+        "\n",
         "  def __getitem__(self,idx):\n",
         "    chunk = self.dataset[idx][\"content\"]\n",
         "    tokens = self.tokenizer(chunk)\n",
@@ -1200,7 +1201,7 @@
         "  valid_loader = DataLoader(\n",
         "      valid_ds,\n",
         "      shuffle=False,\n",
-        "      batch_size=train_config.batch_size*2,\n",
+        "      batch_size=trainer.config.batch_size*2,\n",
         "      num_workers=train_config.num_workers,\n",
         "  )\n",
         "  trainer.set_callback(\"on_batch_end\", batch_end_callback)\n",
@@ -1220,60 +1221,88 @@
         "    print(f\"Pre Trained Generation {j+1}:\", train_ds.tokenizer.decode(generation))\n",
         "\n",
         "\n",
-        "  print(\"\\n===== STARTING SUPERVISED FINE-TUNING (SFT) =====\")"
+        "  print(\"\\n===== STARTING SUPERVISED FINE-TUNING (SFT) =====\")\n",
+        "  sft_dataset = StoryDataset(block_size, split=\"train\", filter_sentiment=\"positive\", tokenizer=train_ds.tokenizer)\n",
+        "  sft_valid = StoryDataset(block_size, split=\"validation\", filter_sentiment=\"positive\", tokenizer=train_ds.tokenizer)\n",
+        "  sft_loader = DataLoader(\n",
+        "      sft_dataset,\n",
+        "      shuffle=True,\n",
+        "      batch_size=train_config.batch_size,\n",
+        "      num_workers=train_config.num_workers,\n",
+        "  )\n",
+        "  #adjust the training config for fine tuning for base   model = GPT(model_config)\n",
+        "  train_config.learning_rate = 1e-4 # lower learning rate for fine tuning\n",
+        "  train_config.epochs = 2 # only two epochs\n",
+        "\n",
+        "  trainer = Trainer(train_config, model, sft_loader)\n",
+        "  trainer.set_callback(\"on_batch_end\", batch_end_callback)\n",
+        "  trainer.run()\n",
+        "  print(\"\\n===== DONE SFT =====\")\n",
+        "\n",
+        "  #check generation from SFT model\n",
+        "  idx = model.generate(sample_prompt, max_new_tokens = 80,top_k=30, do_sample = True)\n",
+        "  for j , generation in enumerate(idx):\n",
+        "    print(f\"SFT Generation {j+1}:\", train_ds.tokenizer.decode(generation))\n",
+        "\n",
+        "  print(\"\\n===== STARTING RL IN-CONTEXT LEARNING (ICL) =====\")\n",
+        "  ref_model = copy.deepcopy(model)\n",
+        "  ref_model.requires_grad(False) #why as we want the policy model weights to not change\n",
+        "  ref_model.eval()\n",
+        "\n",
+        "  #reward model\n",
+        "  reward_model = SentimentRewardModel(train_ds.tokenizer)\n",
+        "  #RL paramaters\n",
+        "  batch_size = 64\n",
+        "  num_iters = 200\n",
+        "  learning_rate = 1e-5\n",
+        "  grad_norm_clip = 1.0\n",
+        "  kl_beta = 0.1 # kl divergence coeff\n",
+        "\n",
+        "  model.to(device)\n",
+        "  logger = Logger()\n",
+        "  optimizer  = torch.optim.Adam(model.parameters(),lr = learning_rate, betas=(0.9,0.95))\n",
+        "  prompt = torch.full((batch_size,1),end_of_text,dtype = torch.long,device = device)\n",
+        "\n",
+        "  print(\"Starting RL training loop...\")\n",
+        "  for i in range(num_iters):\n",
+        "    with torch.nograd():\n",
+        "      model.eval()\n",
+        "      completion = model.generate(prompt,140,temperature = 1.0 , do_sample= True,top_k=30)\n",
+        "      model.train()\n",
+        "      rewards = reward_model(completion)\n",
+        "      ref_log_probs = ref_model.log_probs(completion[:,:1], completion[:,1:])\n",
+        "\n",
+        "    log_probs = model.log_probs(completion[:,:1], completion[:,1:])\n",
+        "    kl = log_probs - ref_log_probs\n",
+        "    # the score is a combination of the reward and KL penalty to prevent the model from deviating too far from the reference\n",
+        "    score = rewards[:,None] - kl_beta*kl\n",
+        "    score = score.detach()\n",
+        "\n",
+        "    #vanilla policy gradient loss\n",
+        "    pg_loss = -torch.mean(score*log_probs)\n",
+        "    loss = pg_loss\n",
+        "    loss.backward()\n",
+        "    torch.nn.utils.clip_grad_norm_(model.parameters(), grad_norm_clip)\n",
+        "    optimizer.step()\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    if i %50 ==0:\n",
+        "      model.eval()\n",
+        "      idx = model.generate(prompt,140,temperature = 1.0 , do_sample= True,top_k=30).cpu()\n",
+        "      for j , generation in enumerate(idx):\n",
+        "        print(f\"RL Generation {j+1}:\", train_ds.tokenizer.decode(generation))\n",
+        "      model.train()\n",
+        "  print(\"RL DONE\")\n",
+        "\n",
+        "  idx = model.generate(sample_prompt, max_new_tokens = 80,top_k=30, do_sample = True)\n",
+        "  for j , generation in enumerate(idx):\n",
+        "    print(f\"RL Generation {j+1}:\", train_ds.tokenizer.decode(generation))"
       ],
       "metadata": {
-        "id": "H0MG8KE2meWr",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "beff2e34-97b3-4e00-8acc-d5c26cd94143"
+        "id": "H0MG8KE2meWr"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "===== STARTING PRETRAINING on TinyStories =====\n",
-            "Building a new tokenizer\n",
-            "data has 8694761 characters , 93 unique\n",
-            "Tokenizer built\n",
-            "Building a new tokenizer\n",
-            "data has 8306393 characters , 95 unique\n",
-            "Tokenizer built\n",
-            "number of parameters: 0.81M\n",
-            "running on device cpu\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py:627: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py:666: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
-            "  warnings.warn(warn_msg)\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "Caught TypeError in DataLoader worker process 0.\nOriginal Traceback (most recent call last):\n  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/data/_utils/worker.py\", line 349, in _worker_loop\n    data = fetcher.fetch(index)  # type: ignore[possibly-undefined]\n           ^^^^^^^^^^^^^^^^^^^^\n  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/data/_utils/fetch.py\", line 52, in fetch\n    data = [self.dataset[idx] for idx in possibly_batched_index]\n            ~~~~~~~~~~~~^^^^^\n  File \"/tmp/ipython-input-94737762.py\", line 45, in __getitem__\n    tokens = self.tokenizer(chunk)\n             ^^^^^^^^^^^^^^^^^^^^^\n  File \"/tmp/ipython-input-1213592807.py\", line 33, in __call__\n    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype=torch.long)\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nTypeError: new() received an invalid combination of arguments - got (list, dtype=torch.dtype), but expected one of:\n * (*, torch.device device = None)\n      didn't match because some of the keywords were incorrect: dtype\n * (torch.Storage storage)\n * (Tensor other)\n * (tuple of ints size, *, torch.device device = None)\n * (object data, *, torch.device device = None)\n\n",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-94737762.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    136\u001b[0m   )\n\u001b[1;32m    137\u001b[0m   \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_callback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"on_batch_end\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbatch_end_callback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_ds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTEST_PROMPT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 138\u001b[0;31m   \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    139\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n===== DONE PRETRAINING =====\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/mingpt/trainer.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0;31m# fetch the next batch (x, y) and re-init iterator if needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m                 \u001b[0mbatch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_iter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m                 \u001b[0mdata_iter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    732\u001b[0m                 \u001b[0;31m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[call-arg]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_yielded\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m             if (\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m_next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1514\u001b[0m                 \u001b[0mworker_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_task_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1515\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_rcvd_idx\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1516\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_process_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworker_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1517\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1518\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_try_put_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m_process_data\u001b[0;34m(self, data, worker_idx)\u001b[0m\n\u001b[1;32m   1549\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_try_put_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1550\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mExceptionWrapper\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1551\u001b[0;31m             \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreraise\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1552\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1553\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/_utils.py\u001b[0m in \u001b[0;36mreraise\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    767\u001b[0m             \u001b[0;31m# be constructed, don't try to instantiate since we don't know how to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    768\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 769\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    770\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    771\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: Caught TypeError in DataLoader worker process 0.\nOriginal Traceback (most recent call last):\n  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/data/_utils/worker.py\", line 349, in _worker_loop\n    data = fetcher.fetch(index)  # type: ignore[possibly-undefined]\n           ^^^^^^^^^^^^^^^^^^^^\n  File \"/usr/local/lib/python3.12/dist-packages/torch/utils/data/_utils/fetch.py\", line 52, in fetch\n    data = [self.dataset[idx] for idx in possibly_batched_index]\n            ~~~~~~~~~~~~^^^^^\n  File \"/tmp/ipython-input-94737762.py\", line 45, in __getitem__\n    tokens = self.tokenizer(chunk)\n             ^^^^^^^^^^^^^^^^^^^^^\n  File \"/tmp/ipython-input-1213592807.py\", line 33, in __call__\n    return torch.LongTensor([self.stoi[c] for c in text if c in self.stoi], dtype=torch.long)\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nTypeError: new() received an invalid combination of arguments - got (list, dtype=torch.dtype), but expected one of:\n * (*, torch.device device = None)\n      didn't match because some of the keywords were incorrect: dtype\n * (torch.Storage storage)\n * (Tensor other)\n * (tuple of ints size, *, torch.device device = None)\n * (object data, *, torch.device device = None)\n\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
