--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN19HaYMMSYpwxvNUGMlcZq",
+      "authorship_tag": "ABX9TyPIlkcTdQIGlm/t63mBFpHg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1170,7 +1170,7 @@
         "  set_seed(42)\n",
         "  TEST_PROMPT =  \"⏎Once upon a time, \"\n",
         "  block_size = 64\n",
-        "  print(\"===== STARTING PRETRAINING on TinyStories =====\")\n",
+        "  print(\"===== STARTING PRETRAINING on TinyStories =====\") - Policy Model\n",
         "  #intialize datasets\n",
         "  train_ds = StoryDataset(block_size , split = \"train\")\n",
         "  valid_ds = StoryDataset(block_size , split = \"validation\")\n",
