--- a/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
+++ b/Reinforcement_Learning_Fine_Tuning_of_LLM_Sample_Code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIlkcTdQIGlm/t63mBFpHg",
+      "authorship_tag": "ABX9TyP4Q//drDLiVHcpd+Ip2E5b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1170,7 +1170,7 @@
         "  set_seed(42)\n",
         "  TEST_PROMPT =  \"⏎Once upon a time, \"\n",
         "  block_size = 64\n",
-        "  print(\"===== STARTING PRETRAINING on TinyStories =====\") - Policy Model\n",
+        "  print(\"===== STARTING PRETRAINING on TinyStories =====\") #POLICY MODEL\n",
         "  #intialize datasets\n",
         "  train_ds = StoryDataset(block_size , split = \"train\")\n",
         "  valid_ds = StoryDataset(block_size , split = \"validation\")\n",
@@ -1222,6 +1222,7 @@
         "\n",
         "\n",
         "  print(\"\\n===== STARTING SUPERVISED FINE-TUNING (SFT) =====\")\n",
+        "  # of the POLICY model - so for RLHF - combo being used is -> Policy Model + SFT (rationale is this SFT steps imporves the accuray of model)\n",
         "  sft_dataset = StoryDataset(block_size, split=\"train\", filter_sentiment=\"positive\", tokenizer=train_ds.tokenizer)\n",
         "  sft_valid = StoryDataset(block_size, split=\"validation\", filter_sentiment=\"positive\", tokenizer=train_ds.tokenizer)\n",
         "  sft_loader = DataLoader(\n",
@@ -1245,6 +1246,9 @@
         "    print(f\"SFT Generation {j+1}:\", train_ds.tokenizer.decode(generation))\n",
         "\n",
         "  print(\"\\n===== STARTING RL IN-CONTEXT LEARNING (ICL) =====\")\n",
+        "  #reward model here is Sentiment Score of the story from the story dataset\n",
+        "  #so it is RLVR = Policy Model(Pre-Trained) + Policy Model(SFT) + Using Reward Model (in this case using Positive Reward Analyzer as reward model)..\n",
+        "  #.. to train the model on human preferences\n",
         "  ref_model = copy.deepcopy(model)\n",
         "  ref_model.requires_grad(False) #why as we want the policy model weights to not change\n",
         "  ref_model.eval()\n",
